syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CopounModel);

	rpc CreateDiscount (CreateDiscountRequest) returns (CopounModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CopounModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);


}

message GetDiscountRequest {
	string productName = 1;
}

message CreateDiscountRequest {
	CopounModel model = 1;
}

message UpdateDiscountRequest {
	CopounModel model = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}

message CopounModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

